[package]
name = "edgeware-client-evm-tracing"
version = '0.1.0'
authors = ['PureStake']
edition = '2021'
homepage = 'https://edgewa.re'
license = 'GPL-3.0-only'
repository = 'https://github.com/edgeware/edgeware-node'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
edgeware-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events" }
ethereum-types = { version = "0.12.1", default-features = false, features = ["codec"] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
hex = { version = "0.4", features = ["serde"]}