[package]
name = 'chainbridge'
version = '1.0.0'
authors = ['david@chainsafe.io']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# primitives
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }

# frame dependencies
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }

pallet-balances = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]

runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]