[package]
name = "edge-assets"
version = "1.0.0"
authors = ["Shoeb Siddiqui <siddiquishoeb.iitm@gmail.com>, Drew Stone <drew@commonwealth.im>"]
edition = "2018"



[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }

[dev-dependencies]
sp-std = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
