[package]
name = "edge-assets"
version = "2.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME asset management pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-std = { version = "2.0", default-features = false }
sp-runtime = { version = "2.0", default-features = false }
frame-support = { version = "2.0", default-features = false }
frame-system = { version = "2.0", default-features = false }
frame-benchmarking = { version = "2.0", default-features = false, optional = true }

[dev-dependencies]
sp-core = { version = "2.0" }
sp-std = { version = "2.0" }
sp-io = { version = "2.0" }
pallet-balances = { version = "2.0", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]