[package]
name = 'edge-chainbridge'
version = '1.0.0'
authors = ['drew@commonwealth.im']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# primitives
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", default-features = false }

chainbridge = { path = "../chainbridge", default-features = false, features = ["runtime-benchmarks"] }

[build-dependencies]
wasm-builder-runner = { git = "https://github.com/paritytech/substrate.git", package = "substrate-wasm-builder-runner" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"chainbridge/std",
]