[package]
name = 'edge-chainbridge'
version = '1.0.0'
authors = ['drew@commonwealth.im']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# primitives
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-arithmetic = { version = "2.0.0", default-features = false }

# frame dependencies
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }

chainbridge = { path = "../chainbridge", default-features = false, features = ["runtime-benchmarks"] }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, rev = "f69c13bf90cc007b553ce228108ad822c33f8459" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"chainbridge/std",
	"orml-tokens/std",
]

runtime-benchmarks = [
	"chainbridge/runtime-benchmarks",
]