[package]
name = "edge-governance"
version = "0.1.0"
authors = ["Jake Naviasky <jake@commonwealth.im>, Drew Stone <drew@commonwealth.im>"]

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "2.1", default-features = false }
parity-codec-derive = { version = "2.1", default-features = false }
substrate-keyring = { git = "https://github.com/paritytech/substrate", optional = true }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-system = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-balances = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-consensus = { git = "https://github.com/paritytech/substrate", default-features = false }
edge-delegation = { path = "../edge-delegation", default-features = false }
edge-voting = { path = "../edge-voting", default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_derive",
    "safe-mix/std",
    "parity-codec/std",
    "parity-codec-derive/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "srml-support/std",
    "sr-primitives/std",
    "srml-system/std",
    "srml-balances/std",
    "srml-timestamp/std",
    "srml-consensus/std",
    "edge-voting/std",
]
