[package]
name = "edge-identity"
version = "0.1.2"
authors = ["Drew Stone <drew@commonwealth.im>"]

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "2.1", default-features = false }
parity-codec-derive = { version = "2.1", default-features = false }
substrate-keyring = { git = "https://github.com/paritytech/substrate", branch = "v0.9", optional = true }
substrate-primitives = { git = "https://github.com/paritytech/substrate", branch = "v0.9", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", branch = "v0.9", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", branch = "v0.9", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", branch = "v0.9", default-features = false }
srml-support = { git = "https://github.com/paritytech/substrate", branch = "v0.9", default-features = false }
srml-system = { git = "https://github.com/paritytech/substrate", branch = "v0.9", default-features = false }
srml-consensus = { git = "https://github.com/paritytech/substrate", branch = "v0.9", default-features = false }
srml-timestamp = { git = "https://github.com/paritytech/substrate", branch = "v0.9", default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_derive",
    "safe-mix/std",
    "parity-codec/std",
    "parity-codec-derive/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "srml-support/std",
    "sr-primitives/std",
    "srml-system/std",
    "srml-consensus/std",
    "srml-timestamp/std",
]
