[package]
name = "edge-identity"
version = "1.0.0"
authors = ["Drew Stone <drew@commonwealth.im>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/drewstone/substrate.git", branch = "drew.customup", default-features = false }
sp-runtime = { git = "https://github.com/drewstone/substrate.git", branch = "drew.customup", default-features = false }
frame-support = { git = "https://github.com/drewstone/substrate.git", branch = "drew.customup", default-features = false }
frame-system = { git = "https://github.com/drewstone/substrate.git", branch = "drew.customup", default-features = false }
pallet-balances = { git = "https://github.com/drewstone/substrate.git", branch = "drew.customup", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/drewstone/substrate.git", branch = "drew.customup", default-features = false }
sp-core = { git = "https://github.com/drewstone/substrate.git", branch = "drew.customup", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "safe-mix/std",
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
]
