[package]
name = "edge-merkletree"
version = "0.1.0"
authors = ["drewstone <drewstone329@gmail.com>"]
edition = "2018"

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "3.0", default-features = false }
parity-codec-derive = { version = "3.0", default-features = false }
substrate-keyring = { git = "https://github.com/paritytech/substrate", optional = true }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-system = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-balances = { git = "https://github.com/paritytech/substrate", default-features = false }
edge-delegation = { path = "../edge-delegation", default-features = false }

hex = "0.3.2"
num-bigint = "0.2.2"
num-traits = "0.2"
sapling-crypto = { git = "https://github.com/matterinc/sapling-crypto" }
bellman = { git = 'https://github.com/matterinc/bellman', tag = "0.2.0"}

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_derive",
    "safe-mix/std",
    "parity-codec/std",
    "parity-codec-derive/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "srml-support/std",
    "sr-primitives/std",
    "srml-system/std",
    "srml-balances/std",
    "edge-delegation/std",
]
