[package]
name = "edge-ren"
version = "1.0.0"
authors = ["Drew Stone <drew@commonwealth.im>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }


edgeware-primitives = { path = "../../node/primitives", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, rev = "266518ffaf5b9f664c1481330295a994dd71b01b" }


[dev-dependencies]
hex-literal = { version = "0.3.1" }
pallet-balances = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"frame-system/std",
	"frame-support/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"edgeware-primitives/std",
	"orml-traits/std",
]
