[package]
name = "edge-ren"
version = "1.0.0"
authors = ["Shoeb Siddiqui <siddiquishoeb.iitm@gmail.com>, Drew Stone <drew@commonwealth.im>"]
edition = "2018"



[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
coinaddress = { version = "1.1.3", default-features = false }
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
edge-assets = { version = "1.0.0", default-features = false, path = "../../modules/edge-assets" }


[dev-dependencies]
hex-literal = { version = "0.3.1" }
pallet-balances = { version = "2.0.0", default-features = false }



[features]
default = ["std"]
std = [
	"frame-system/std",
	"frame-support/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"edge-assets/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
