[package]
name = "edge-signaling"
version = "1.0.0"
authors = ["Jake Naviasky <jake@commonwealth.im>, Drew Stone <drew@commonwealth.im>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", default-features = false }
voting = { package ="edge-voting", path = "../edge-voting", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"serde_derive",
	"safe-mix/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",
	"voting/std",
]
