[package]
name = "edge-treasury-reward"
version = "1.0.0"
authors = ["drewstone <drewstone329@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }
sp-runtime = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }
frame-support = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }
frame-system = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }
pallet-staking = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }
pallet-balances = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }
pallet-treasury = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }
sp-staking = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }
sp-core = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }
pallet-session = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }
pallet-timestamp = { git = "https://github.com/apopiak/substrate.git", branch = "apopiak-migrations", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-staking/std",
	"pallet-treasury/std",
]
