[package]
name = "edge-treasury-reward"
version = "1.0.0"
authors = ["drewstone <drewstone329@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { path = "../../vendor/frontier/vendor/substrate/primitives/std", default-features = false }
sp-runtime = { path = "../../vendor/frontier/vendor/substrate/primitives/runtime", default-features = false }
frame-support = { path = "../../vendor/frontier/vendor/substrate/frame/support", default-features = false }
frame-system = { path = "../../vendor/frontier/vendor/substrate/frame/system", default-features = false }
pallet-staking = { path = "../../vendor/frontier/vendor/substrate/frame/staking", default-features = false }
pallet-balances = { path = "../../vendor/frontier/vendor/substrate/frame/balances", default-features = false }
pallet-treasury = { path = "../../vendor/frontier/vendor/substrate/frame/treasury", default-features = false }

[dev-dependencies]
sp-io = { path = "../../vendor/frontier/vendor/substrate/primitives/io", default-features = false }
sp-staking = { path = "../../vendor/frontier/vendor/substrate/primitives/staking", default-features = false }
sp-core = { path = "../../vendor/frontier/vendor/substrate/primitives/core", default-features = false }
pallet-staking-reward-curve = { path = "../../vendor/frontier/vendor/substrate/frame/staking/reward-curve", default-features = false }
pallet-session = { path = "../../vendor/frontier/vendor/substrate/frame/session", default-features = false }
pallet-timestamp = { path = "../../vendor/frontier/vendor/substrate/frame/timestamp", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-staking/std",
	"pallet-treasury/std",
]
