[package]
name = "edge-treasury-reward"
version = "1.0.0"
authors = ["drewstone <drewstone329@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0", default-features = false }
sp-runtime = { version = "2.0", default-features = false }
frame-support = { version = "2.0", default-features = false }
frame-system = { version = "2.0", default-features = false }
pallet-authorship = { version = "2.0", default-features = false }
pallet-staking = { version = "2.0", default-features = false }
pallet-balances = { version = "2.0", default-features = false }
pallet-treasury = { version = "2.0", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0", default-features = false }
sp-staking = { version = "2.0", default-features = false }
sp-core = { version = "2.0", default-features = false }
pallet-staking-reward-curve = { version = "2.0", default-features = false }
pallet-session = { version = "2.0", default-features = false }
pallet-timestamp = { version = "2.0", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-staking/std",
	"pallet-treasury/std",
]
