[package]
name = "edge-voting"
version = "1.0.0"
authors = ["Drew Stone <drew@commonwealth.im>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { path = "../../vendor/frontier/vendor/substrate/primitives/std", default-features = false }
sp-runtime = { path = "../../vendor/frontier/vendor/substrate/primitives/runtime", default-features = false }
frame-support = { path = "../../vendor/frontier/vendor/substrate/frame/support", default-features = false }
frame-system = { path = "../../vendor/frontier/vendor/substrate/frame/system", default-features = false }
pallet-balances = { path = "../../vendor/frontier/vendor/substrate/frame/balances", default-features = false }

[dev-dependencies]
sp-io = { path = "../../vendor/frontier/vendor/substrate/primitives/io", default-features = false }
sp-core = { path = "../../vendor/frontier/vendor/substrate/primitives/core", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
