[package]
name = "edge-voting"
version = "1.0.0"
authors = ["Drew Stone <drew@commonwealth.im>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware auxiliary voting module"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }
sp-runtime = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }
frame-support = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }
frame-system = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }
pallet-balances = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }
sp-core = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
