[package]
name = "edge-x"
version = "0.1.0"
authors = ["drewstone <drewstone329@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate.git", default-features = false }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate.git", default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate.git", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", default-features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", default-features = false }

[dev-dependencies]
primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sr-primitives/std",
	"support/std",
	"system/std",
	"balances/std",
	"runtime-io/std",
	"rstd/std"
]