 [package]
name = 'edgeware-cli-opt'
homepage = 'https://edgware.re'
license = 'GPL-3.0-only'
version = '0.14.2'
authors = ["Filip @ Edgeware"]
edition = '2021'

[dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
structopt = "0.3.8"
tiny-bip39 = "0.8"
libsecp256k1 = "0.7"
primitive-types = { version = "0.11.1", features= ["std", "serde"] } 
sha3 = "0.9"
tiny-hderive = "0.3.0"
