 [package]
name = 'edgeware-cli-opt'
homepage = 'https://edgware.re'
license = 'GPL-3.0-only'
version = '0.14.2'
authors = ["Filip @ Edgeware"]
edition = '2021'

[dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
structopt = "0.3"#{ version = "0.3.8", features=["paw"]}
tiny-bip39 = "0.8"
libsecp256k1 = "0.7"
primitive-types = "0.11.1"
sha3 = "0.10.1"
tiny-hderive = "0.3.0"
url = "2.2.2"
